# voice-bench

./: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: data_rules.asr.yaml  default.yaml  gates.tts.yaml  gates.yaml  service.chunkformer.yaml  service.large.yaml  service.tts.yaml  service.vad.yaml  service.yaml  smoke.yaml
data/: manifest.example.jsonl  manifest_dev.jsonl  manifest_trainval_v1.jsonl  manifest_v1.jsonl  manifest_v1.sha256
data/eval/: README.md  eval_3min.manifest.jsonl  eval_3min.txt
data/eval_ood/: README.md  ood.manifest.jsonl
data/eval_ood2/: ood2.manifest.jsonl
data/manifest_v1/: listen_check.md  qc_asr.json
data/train_mix_v1/: FREEZE.sha256  build_stats.json
scripts/: bench_models.py  build_asr_train_mix.py  build_eval_ood.py  build_eval_ood2.py  build_eval_set.py  build_manifest_v1.py  diag_per_utt.py  download_models.py  eval_service.py  smoke_tts.py  train_st2.py  tune_longform.py  verify_asr_dataset.py  verify_product.py
tests/: test_audio.py  test_bootstrap.py  test_engines_measure.py  test_latency.py  test_report.py  test_service.py  test_text_norm.py  test_timing.py  test_tts_contract.py  test_vad_chunk.py  test_verify_asr_dataset.py  test_wer.py
voicebench/: __init__.py  audio.py  interfaces.py  report.py  run_benchmark.py  service.py  timing.py
voicebench/engines/: __init__.py  asr_chunkformer.py  asr_phowhisper.py  asr_whisper.py  base.py  registry.py  tts_viettts.py  tts_vixtts.py
voicebench/metrics/: __init__.py  bootstrap.py  latency.py  mos.py  speaker_sim.py  text_norm.py  (+1 more)
